# sbtc

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  POC.md  README.md  RELEASE.md  SECURITY.md  cltv-wallet.json  nextest.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  signers.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
devenv/: Cargo.toml
devenv/deterministic-dkg/: docker-compose.yml  dump.sh  signer-1.sql  signer-2.sql  signer-3.sql
devenv/setup/src/: aws_setup.rs  donate.rs  error.rs  main.rs
devenv/spox/: docker-compose.yml
devenv/src/: aws_setup.rs  donate.rs  error.rs  stacks.rs
devenv/tests/: docker-compose.override.yml  test_devenv.py
emily/: README.md
emily/handler/: Cargo.toml  README.md
emily/handler/src/: context.rs  logging.rs
emily/handler/src/api/handlers/: chainstate.rs  chainstate2.rs  deposit.rs  deposit2.rs  health.rs  health2.rs  internal.rs  limits.rs  limits2.rs  mod.rs  new_block.rs  new_block2.rs  slowdown.rs  testing.rs  testing2.rs  throttle.rs  withdrawal.rs  withdrawal2.rs
emily/handler/src/api/models/: chainstate.rs  limits.rs  mod.rs  new_block.rs  slowdown.rs  throttle.rs
emily/handler/src/api/models/common/: mod.rs
emily/handler/src/api/models/deposit/: mod.rs  requests.rs  responses.rs
emily/handler/src/api/models/health/: responses.rs
emily/handler/src/api/models/withdrawal/: mod.rs  requests.rs  responses.rs
emily/handler/src/api/routes/: chainstate.rs  deposit.rs  health.rs  limits.rs  mod.rs  new_block.rs  slowdown.rs  testing.rs  throttle.rs  withdrawal.rs
emily/handler/src/common/: error.rs  mod.rs
emily/handler/src/database/: accessors.rs
emily/handler/src/database/entries/: deposit.rs  limits.rs  mod.rs  slowdown.rs  throttle.rs  withdrawal.rs
emily/handler/tests/fixtures/: completed-deposit-testnet-event.json
emily/handler/tests/integration/: chainstate.rs  common.rs  deposit.rs  health.rs  limits.rs  main.rs  new_block.rs  slowdown.rs  throttle.rs  withdrawal.rs
sbtc/: Cargo.toml
sbtc/src/: deposits.rs  error.rs  events.rs  leb128.rs  lib.rs  webhooks.rs
sbtc/src/idpack/: segment.rs  tests.rs
sbtc/src/idpack/codec/: decoder.rs
sbtc/src/idpack/segmenters/: bitmap.rs
sbtc/src/testing/: containers.rs  deposits.rs  emily.rs  mod.rs  regtest.rs
sbtc/tests/integration/: containers.rs  emily.rs  main.rs  validation.rs
signer/: Cargo.toml  README.md  build.rs
signer/examples/: dkg_flood.rs
signer/migrations/: 0016__add_block_hash_rotate_keys_events.sql  0016__modify_rotate_keys_transactions_table.sql  0017__remove_stacks_transactions_table.sql  0018__p2p_peers.sql  0018__store_reclaim_script_hash.sql  0019__p2p_peers.sql  0019_drop_reclaim_script_column.sql  0020__drop_reclaim_script_column.sql  0021__add_is_canonical_to_bitcoin_blocks.sql  0021__alter_max_fee_column.sql  0021__create_stacks_blocks_temp.sql  0023__drop_sighash_validation_columns.sql
signer/src/: bitcoin_pruner.rs  block_observer.rs  blocklist_client.rs  codec.rs  ecdsa.rs  emily_client.rs  error.rs  keys.rs  lib.rs  logging.rs  main.rs  message.rs  metrics.rs  request_decider.rs  signature.rs  transaction_coordinator.rs  transaction_signer.rs  util.rs  wsts_state_machine.rs
signer/src/api/: info.rs  mod.rs  new_block.rs  router.rs
signer/src/backups/: backup.rs  mod.rs  restore.rs
signer/src/bitcoin/: client.rs  mod.rs  packaging.rs  poller.rs  rpc.rs  utxo.rs  validation.rs  zmq.rs
signer/src/cli/: error.rs  mod.rs
signer/src/cli/backups/: backup.rs  mod.rs  restore.rs
signer/src/config/: default.toml  error.rs  mod.rs  serialization.rs
signer/src/context/: messaging.rs  mod.rs  signer_context.rs  signer_state.rs
signer/src/dkg/: testing.rs  verification.rs
signer/src/network/: in_memory.rs  in_memory2.rs
signer/src/network/libp2p/: allow_signers.rs  bootstrap.rs  event_loop.rs  gatekeeper.rs  mod.rs  multiaddr.rs  network.rs  swarm.rs
signer/src/proto/: convert.rs  mod.rs
signer/src/stacks/: api.rs  contracts.rs  wallet.rs
signer/src/storage/: in_memory.rs  mod.rs  model.rs  postgres.rs  sqlx.rs
signer/src/storage/in_memory/: memory.rs  mod.rs  transaction.rs
signer/src/storage/memory/: mod.rs  read.rs  store.rs  tests.rs  transaction.rs  write.rs
signer/src/storage/pgsql/: mod.rs  read.rs  store.rs  write.rs
signer/src/storage/postgres/: mod.rs  read.rs  store.rs  transaction.rs  write.rs
signer/src/testing/: block_observer.rs  blocks.rs  btc.rs  context.rs  dummy.rs  message.rs  mod.rs  network.rs  request_decider.rs  requests.rs  stacks.rs  storage.rs  transaction_coordinator.rs  transaction_signer.rs  wallet.rs  wsts.rs
signer/src/testing/stacks/: contracts.rs  mod.rs
signer/src/testing/storage/: model.rs  postgres.rs
signer/tests/devenv/: devenv.rs  main.rs
signer/tests/fixtures/: completed-deposit-event.json  rotate-keys-and-invalid-event.json  rotate-keys-event.json  stacksapi-v3-sortitions.json  stacksapi-v3-tenures-blocks-1.json  stacksapi-v3-tenures-blocks-2.json  stacksapi-v3-tenures-blocks-3.json  stacksapi-v3-tenures-blocks.json  withdrawal-accept-event.json  withdrawal-create-event.json  withdrawal-reject-event.json
signer/tests/integration/: bitcoin_client.rs  bitcoin_forks.rs  bitcoin_poller.rs  bitcoin_rpc.rs  bitcoin_validation.rs  block_observer.rs  communication.rs  complete_deposit.rs  containers.rs  contracts.rs  devenv.rs  e2e.rs  emily.rs  main.rs  malicious.rs  postgres.rs  rbf.rs  request_decider.rs  rotate_keys.rs  setup.rs  stacks.rs  transaction_coordinator.rs  transaction_signer.rs  utxo_construction.rs  withdrawal_accept.rs  withdrawal_reject.rs  zmq.rs
signer/tests/integration/commands/: context.rs  db.rs  dkg.rs  mod.rs  runtime.rs  test_cases.rs
signer/tests/service-configs/: bitcoin.conf
wsts/: Cargo.toml
wsts/src/: common.rs  compute.rs  errors.rs  lib.rs  net.rs  schnorr.rs  taproot.rs  traits.rs  util.rs  v1.rs  v2.rs
wsts/src/state_machine/: mod.rs
wsts/src/state_machine/coordinator/: fire.rs  frost.rs  mod.rs
wsts/src/state_machine/signer/: mod.rs
(+310 files in other folders)
