[package]
name = "sbtc"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["bitcoincore-rpc-json", "stackslib"]

[features]
default = []
testing = ["dep:bitcoincore-rpc", "dep:bitcoincore-rpc-json", "dep:aws-config", "dep:aws-sdk-dynamodb", "dep:aws-smithy-runtime", "dep:hyper_014", "dep:tokio", "dep:futures"]
webhooks = ["dep:hex"]

[dependencies]
bitcoin.workspace = true
clarity.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
stacks-common.workspace = true
thiserror.workspace = true

# Optional Dependencies
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-smithy-runtime = { workspace = true, optional = true }
bitcoincore-rpc = { workspace = true, optional = true }
bitcoincore-rpc-json = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hyper_014 = { workspace = true, optional = true }
stackslib = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true 
assert_matches.workspace = true
bitcoincore-rpc.workspace = true
bitcoincore-rpc-json.workspace = true
more-asserts.workspace = true
proptest.workspace = true
test-case.workspace = true

# Inherit lints from the workspace
[lints]
workspace = true
