[package]
name = "signer"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["tonic", "tonic-build", "stackslib"]

[[bin]]
name = "demo-cli"
path = "src/bin/demo_cli.rs"

[features]
default = []
testing = ["dep:fake", "dep:mockall", "sbtc/testing"]

[dependencies]
# Local crates
sbtc = { workspace = true, features = ["webhooks"] }

# External crates
aquamarine.workspace = true
axum.workspace = true
bitcoin.workspace = true
bitcoinconsensus.workspace = true
bitcoincore-rpc.workspace = true
bitcoincore-rpc-json.workspace = true
bitvec.workspace = true
blocklist-api.workspace = true
cfg-if.workspace = true
clap.workspace = true
clarity.workspace = true
config.workspace = true
emily-client.workspace = true
futures.workspace = true
hashbrown.workspace = true
hex.workspace = true
include_dir.workspace = true
libp2p.workspace = true
lru.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
p256k1.workspace = true
polynomial.workspace = true
prost.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
stacks-common.workspace = true
stackslib.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
wsts.workspace = true

# Only for testing
fake = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
# Local crates
sbtc = { workspace = true, features = ["testing"] }
# Add ourself as a dev-dependency with the "testing" feature enabled to
# automatically include testing functionality for debug builds (i.e. dev/test).
# This also ensures that your IDE will recognize feature-gated code as active.
signer = { path = ".", features = ["testing"] }

# External crates
assert_matches.workspace = true
bitcoincore-rpc.workspace = true
mockito.workspace = true
more-asserts.workspace = true
ripemd.workspace = true
tempfile.workspace = true
test-case.workspace = true
test-log.workspace = true
testing-emily-client.workspace = true
toml_edit.workspace = true
tower.workspace = true

# Inherit lints from the workspace
[lints]
workspace = true
